# financial_tracker

./: README.md  requirements.txt
app/: build.gradle.kts
app/src/main/res/color/: nav_item_color.xml
app/src/main/res/drawable/: ic_calendar_range.xml  ic_calendar_week.xml  ic_fingerprint.xml  ic_settings.xml
app/src/main/res/layout/: activity_lock_screen.xml  activity_main.xml  activity_setup_pin.xml  dialog_filter_transactions.xml  dialog_transaction_details.xml  fragment_backup.xml  fragment_dashboard.xml  fragment_export.xml  fragment_reports.xml  fragment_settings.xml  item_category_breakdown.xml  item_transaction.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values-night/: themes.xml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/Model/: transaction.py
backend/financial-tracker-backend/: README.md  main.py  pyproject.toml
backend/financial-tracker-backend/app/Model/: report.py
backend/financial-tracker-backend/app/routers/: reports.py
backend/financial-tracker-backend/app/services/: ai_service.py  analytics.py  pdf_service.py
backend/routers/: reports.py
backend/services/: ai_service.py  analytics.py  pdf_service.py
financial-tracker-backend/: config.py
financial-tracker-backend/Model/: report.py
frontend/: settings.gradle.kts
frontend/app/: build.gradle.kts
frontend/app/src/main/: AndroidManifest.xml
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
gradle/: libs.versions.toml
(+107 files in other folders)
