[project]
name = "financial-tracker-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.62.0",
    "google-generativeai>=0.8.6",
    "pillow>=12.1.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
    "uvicorn>=0.40.0",
]
